fix double scrollbar on modal

--- a/css/component.css
+++ b/css/component.css
@@ -164,13 +164,12 @@
   position: fixed;
 	top: 50%;
 	left: 50%;
-  min-height: 280px;
+  min-height: 370px;
   height: 80%;
   min-width: 280px;
 	width: 50%;
   max-width: 630px;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
 	z-index: 2000;
 	visibility: hidden;
 	backface-visibility: hidden;
@@ -233,7 +232,6 @@
 
 .modal-content > .modal-body{
   height: calc(100% - 75px);
-  overflow-y: scroll;
 	font-weight: 300;
 	font-size: 20px
 }
